# lib/api-spec/openapi.yaml
@@ -342,6 +342,10 @@ paths:
           in: query
           schema:
             type: boolean
+        - name: isProPackage
+          in: query
+          schema:
+            type: boolean
         - name: page
           in: query
           schema:
@@ -914,6 +918,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: limit
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: Payouts
@@ -1147,6 +1155,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: limit
+          in: query
+          schema:
+            type: integer
       responses:
         "200":
           description: Messages
@@ -1374,6 +1386,10 @@ paths:
                         type: integer
                       level2Unlocked:
                         type: boolean
+                  powerSquadBonus:
+                    type: number
+                  rolling30DayPcv:
+                    type: number
 
   /reports/sales:
     get:
@@ -1447,6 +1463,14 @@ components:
           type: string
       required:
         - status
+
+    Error:
+      type: object
+      properties:
+        error:
+          type: string
+      required:
+        - error
 
     LoginBody:
       type: object
@@ -2690,6 +2714,9 @@ components:
           type: ["string", "null"]
         demoMode:
           type: boolean
+        tickerSpeed:
+          type: string
+          enum: [slow, medium, fast]
       required:
         - companyName
         - contactEmail
@@ -2699,6 +2726,7 @@ components:
         - paymentMethods
         - registrationPackagePrice
         - demoMode
+        - tickerSpeed
 
     PromoCode:
       type: object
